# automate_workflows

./: .env.example  .gitignore  .nvm  CLAUDE.md  README.md  docker-compose.override.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_organizations.py  003_add_audit_logs.py  004_add_verification_tokens.py  005_add_projects_and_proposals.py  006_add_invoices.py  007_add_workflow_tables.py  008_add_notification_preferences.py  008_add_ticket_tables.py  008a_add_ticket_tables.py  008b_add_notification_preferences.py  009_add_sla_notification_tracking.py  010_add_oauth_accounts.py  011_add_subscriptions.py  012_add_email_verified_to_users.py  013_add_workflow_versions.py  014_add_documents.py  015_add_time_entries.py  016_add_messages.py  017_add_activity_feed.py  018_add_announcements.py  019_add_reports.py  020_add_onboarding.py  021_add_surveys.py  022_add_email_templates.py  023_add_push_subscriptions.py  024_add_integrations.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  activity.py  admin.py  analytics.py  announcements.py  auth.py  documents.py  email_templates.py  integrations.py  invoices.py  messages.py  notification_preferences.py  oauth.py  onboarding.py  organizations.py  projects.py  proposals.py  push.py  reports.py  subscriptions.py  surveys.py  tickets.py  time_entries.py  workflow_ai.py  workflows.py
backend/app/core/: __init__.py  auth.py  config.py  deps.py  exception_handlers.py  exceptions.py
backend/app/dao/: __init__.py  activity.py  announcement.py  audit_log.py  base.py  document.py  email_template.py  execution_log.py  integration.py  invoice.py  message.py  n8n_environment.py  notification_preference.py  oauth_account.py  onboarding.py  project.py  proposal.py  push_subscription.py  report.py  subscription.py  survey.py  ticket.py  time_entry.py  user.py  verification_token.py  workflow_instance.py  workflow_template.py  workflow_version.py
backend/app/db/: __init__.py  session.py
backend/app/jobs/: __init__.py
backend/app/middleware/: __init__.py  rate_limiter.py  request_context.py  security_headers.py
backend/app/models/: __init__.py  activity.py  announcement.py  audit_log.py  base.py  document.py  email_template.py  integration.py  invoice.py  message.py  notification_preference.py  oauth_account.py  onboarding.py  organization.py  project.py  proposal.py  push_subscription.py  report.py  subscription.py  survey.py  ticket.py  time_entry.py  user.py  verification_token.py  workflow.py
backend/app/schemas/: __init__.py  activity.py  announcement.py  auth.py  document.py  email_template.py  integration.py  invoice.py  message.py  notification_preference.py  oauth.py  onboarding.py  organization.py  project.py  proposal.py  report.py  subscription.py  survey.py  ticket.py  (+4 more)
backend/tests/: README.md  __init__.py  conftest.py  factories.py
(+213 files in other folders)
